Changed sup styling to avoid uneven line spacing

--- a/style.css
+++ b/style.css
@@ -9,3 +9,4 @@ table.simplelist td {padding:0.5em;}
 dt {font-weight:bold;}
 span.underline{text-decoration:underline;}
 .multicite{color:#303030; font-size:0.8em;}
+sup {vertical-align:top; font-size:0.75em;position:relative; top:-0.25em;}
